--- a/libs/index.wxml
+++ b/libs/index.wxml
@@ -1,4 +1,7 @@
-<view wx:if="{{mask}}" class="modal-mask {{visible ? 'show' : ''}}" style="z-index: {{zIndex}};" bind:tap="onTapMask"></view>
-<view class="modal-content {{gravity}} {{visible ? 'show' : ''}} ui-class" style="z-index: {{zIndex}};">
+<view wx:if="{{mask}}" class="modal-mask {{visible ? 'show' : ''}}"
+      style="z-index: {{zIndex}};transition-duration:{{animDuration}}"
+      bind:tap="onTapMask"></view>
+<view class="modal-content {{gravity}} {{visible ? 'show' : ''}} ui-class"
+      style="z-index: {{zIndex}};transition-duration:{{animDuration}}">
     <slot></slot>
 </view>
