--- a/libs/index.wxss
+++ b/libs/index.wxss
@@ -7,7 +7,8 @@
     visibility: hidden;
     opacity: 0;
     background: rgba(0, 0, 0, .6);
-    transition: all .3s ease-in-out
+    transition-property: all;
+    transition-timing-function: ease-in-out;
 }
 
 .modal-mask.show {
@@ -18,7 +19,6 @@
 .modal-content {
     position: fixed;
     visibility: hidden;
-    transition: all .3s ease-in-out;
 }
 
 .center {
