--- a/libs/index.wxss
+++ b/libs/index.wxss
@@ -13,7 +13,7 @@
 
 .modal-mask.show {
     opacity: 1;
-    visibility: visible
+    visibility: visible;
 }
 
 .modal-content {
@@ -30,7 +30,7 @@
 
 .center.show {
     opacity: 1;
-    visibility: visible
+    visibility: visible;
 }
 
 .left {
