--- a/libs/index.wxss
+++ b/libs/index.wxss
@@ -22,15 +22,28 @@
 }
 
 .center {
-    left: 50%;
-    top: 50%;
-    opacity: 0;
+    left: -50%;
+    top: -50%;
     transform: translate3d(-50%, -50%, 0);
 }
 
 .center.show {
-    opacity: 1;
-    visibility: visible;
+    left: 50%;
+    top: 50%;
+    animation-timing-function: linear;
+    animation-fill-mode: forwards;
+    animation-name: center;
+}
+
+@keyframes center {
+    from {
+        opacity: 0;
+        visibility: hidden;
+    }
+    to {
+        opacity: 1;
+        visibility: visible;
+    }
 }
 
 .left {
