--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,5 +1,5 @@
 <view class="container">
-    <modal mask="{{true}}"
+    <modal mask="{{false}}"
            visible="{{modal.center}}"
            gravity="center"
            z-index="{{200}}"
