--- a/libs/index.wxml
+++ b/libs/index.wxml
@@ -2,7 +2,7 @@
 <view wx:if="{{mask}}" class="mask {{visible ? 'show' : ''}}"
       style="z-index:{{zIndex}};transition-duration:{{animDuration}}"
       bind:tap="onTapMask"></view>
-<view class="modal {{gravity}} {{visible ? 'show' : ''}} ui-class"
+<view class="modal {{gravity}} {{visible ? 'show' : ''}} ui-class mini-class"
       style="z-index:{{zIndex}};{{i.anim(gravity, animDuration)}}">
     <slot></slot>
 </view>
